--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Camdozaal Fishing Helper
+displayName=Item Processing Warner
 author=Aeimo
-description=Visual indicators and alerts to simplify Camdozaal fishing
-tags=afk,camdozaal,f2p,fishing,prayer
-plugins=com.aeimo.camdozaalfishing.ItemProcessingWarnerPlugin
+description=Alerts and Advance Warnings 0for Item Processing Tasks (e.g. Crafting)
+tags=item,items,processing,completion,warn,warning,alert,skilling,cooking,crafting,smithing,smelting,fletching,prayer,herblore
+plugins=com.aeimo.itemprocessingwarner.ItemProcessingWarnerPlugin
